FlightPath 6.x Changelog
========================

2022-02-02
  Fixed bug where student name was being used instead of faculty name when sending a txt message via Engagements.
  
  Also fixed bug where if student has no number, it was showing that they had opted-out, which was not necessarily true.

  Added extra spans and css styling when showing pie charts.

  Changed delete links on History tab to use simple "X" from font-awesome, both
  for advising and student files.
  
  Changed queries for advising history to look up "groups" of advising sessions by advising_session_token.
  
  Added ability in creating a confirm link (in misc.php) to have a link title
  so something appears when you hover over link.

2022-01-30
  When drawing pie charts, use base_url() instead of function base_path() to use the pchart library. Added more CSS class to make it easier to theme later.  


2022-01-27
  Fixed bug where draft mode was no longer accessible.

  Fixed several bugs where school_id was not being taken into account with regard to track selection.
  
  Fixed FlightPath::get_all_courses_in_catalog_year()-- noticed that it was hard-coded to only return undergrad courses.  Added
  a boolean to change that.
  

2022-01-26
  Tweaked logic to function that "balances" the student profile attributes.
  
  
2022-01-19
  Added new function: db_get_user_id_from_user_name()


2022-01-17
  Added ability to change site logo (in system settings).
  
  Added "powered by FlightPath Academics" to bottom of page template.
  
  Correcting if statements checking for if hours < 1 to if hours == 0, since some courses at some
  schools may be less than 1 hour.
  

2022-01-16
  Changed the 404 error to log as "page_not_found" type, instead of "system", as it shows up quite a bit in the logs and can be
  difficult to sift through for valid system messages.
  
  Updated Lassie message to show time in site's default timezone.
  

2022-01-15