@@ -1598,11 +1598,11 @@ function system_school_data_form($school_id = 0) {
                         letter grade.  If you are unsure what to enter here, or if your school does not use numeric grades, leave this blank.
                         <br>Enter in the form of:  MIN ~ MAX ~ GRADE
                         <br>Ex:
-                        <br>&nbsp; 0 ~ 59 ~ F
-                        <br>&nbsp; 60 ~ 69 ~ D
-                        <br>&nbsp; 70 ~ 79 ~ C
-                        <br>&nbsp; 80 ~ 89 ~ B
-                        <br>&nbsp; 90 ~ 100 ~ A
+                        <br>&nbsp; 0 ~ 59.99 ~ F
+                        <br>&nbsp; 60 ~ 69.99 ~ D
+                        <br>&nbsp; 70 ~ 79.99 ~ C
+                        <br>&nbsp; 80 ~ 89.99 ~ B
+                        <br>&nbsp; 90 ~ 100.99 ~ A
                         <br>&nbsp; 101 ~ 999 ~ A     &nbsp; &nbsp; <em>(In case scores above 100 are possible)</em>"),
   );
   
